# LLM_infra_from_scratch

./: CMakeLists.txt  LICENSE  README.md
project/include/base/: allocator.h  base.h  cpu_allocator.h  memory_manager.h  timer.h  utils.h
project/include/tensor/: tensor.h
project/src/base/: allocator.cpp  cpu_allocator.cpp  memory_manager.cpp
project/src/tensor/: tensor.cpp
test/: CMakeLists.txt
test/base/: cpu_allocator_test.cpp
test/cuda_api_test/: cuda_api_test.cpp
test/eigen_test/: hello_eigen.cpp
test/operators_test/: operator_matrix.cpp
test/tensor/: test_memory.cpp  test_tensor.cpp
vscode_config/: c_cpp_properties.json  settings.json
